--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -42,3 +42,7 @@ nav.navbar {
   height: 100vh;
   width: 100%;
 }
+
+.snap-section {
+  overflow: visible !important;
+}
