--- a/src/Pages/Testing.css
+++ b/src/Pages/Testing.css
@@ -1,94 +1,125 @@
-.hero-cola {
-    /* position: relative; */
+.hero-lemon {
+    position: relative;
     height: 100vh;
-    /* width: 100%; */
-    background: #d60000 url("../assets/ColaBg.png") center center / cover no-repeat;
+    background: #f6e600 url("../assets/LemonBg.png") center center / cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     overflow: hidden;
     padding: 0 15px;
-}
-
-/* Text */
-.hero-cola-text {
-    position: absolute;
-    color: #fff;
-    text-align: center;
     z-index: 2;
+    /* Higher than cola */
 }
 
-.hero-cola-text h1 {
+.hero-lemon-text {
+    position: absolute;
+    color: #004400;
+    text-align: center;
+    z-index: 3;
+}
+
+.hero-lemon-text h1 {
     margin: 0;
     font-weight: 700;
     font-size: 160px;
     line-height: 1;
 }
 
-.hero-cola-text h1 span {
-    color: #ffef9f;
+.hero-lemon-text h1 span {
+    color: #ffee00;
 }
 
-.top-cola-text {
+.top-lemon-text {
+    position: relative;
+    left: 0px;
+    top: -170px;
+    font-size: 128px;
+    color: white;
+    font-weight: 700;
+}
+
+.top-lemon-text span {
+    letter-spacing: -6%;
+
+}
+
+.left-lemon-text {
     position: absolute;
     left: 100px;
-    top: -40px;
-    margin: 0;
+    top: -50px;
+    font-size: 128px;
+    color: white;
     font-weight: 700;
-    font-size: 48px;
 }
 
-.mid-cola-text {
+.left-lemon-text span {
+    letter-spacing: -6%;
+
+}
+
+.right-lemon-text {
+    position: absolute;
+    right: 180px;
+    top: 90px;
+    color: white;
+    font-weight: 700;
+}
+
+.right-lemon-text .small-heading {
+    letter-spacing: -6%;
+    font-size: 48px;
+
+}
+
+
+
+
+.mid-lemon-text {
     position: absolute;
     left: 30%;
     bottom: -40px;
-    margin: 0;
-    font-weight: 700;
     font-size: 48px;
+    font-weight: 700;
 }
 
-.bottom-cola-text {
+.bottom-lemon-text {
     position: absolute;
     right: -150px;
     bottom: -80px;
-    margin: 0;
-    font-weight: 700;
     font-size: 96px;
+    font-weight: 700;
 }
 
 /* Bottle */
-.bottle-cola-wrap {
+.bottle-lemon-wrap {
     position: relative;
-    z-index: 3;
+    z-index: 4;
     margin-top: 100px;
 }
 
-.bottle-cola {
+.bottle-lemon {
     width: 130px;
-    height: auto;
 }
 
 /* Ice */
-.ice-cola {
+.ice-lemon {
     position: absolute;
     width: 150px;
     opacity: 0.9;
-    animation: floatIceCola 4s ease-in-out infinite;
+    animation: floatIceLemon 4s ease-in-out infinite;
 }
 
-.ice-cola-top {
+.ice-lemon-top {
     top: 0px;
     right: -150px;
 }
 
-.ice-cola-bottom {
+.ice-lemon-bottom {
     bottom: 50px;
     left: -200px;
 }
 
-@keyframes floatIceCola {
+@keyframes floatIceLemon {
     0% {
         transform: translateY(0) rotate(0deg);
     }
@@ -103,14 +134,14 @@
 }
 
 /* Mouse Scroll */
-.mouse-cola {
+.mouse-lemon {
     position: absolute;
     bottom: 20px;
     width: 35px;
-    animation: mouseColaAnim 1.5s infinite ease-in-out;
+    animation: mouseLemonAnim 1.5s infinite ease-in-out;
 }
 
-@keyframes mouseColaAnim {
+@keyframes mouseLemonAnim {
     0% {
         transform: translateY(0);
     }
@@ -121,97 +152,5 @@
 
     100% {
         transform: translateY(0);
-    }
-}
-
-/* ========== Responsive ========== */
-@media (max-width: 1024px) {
-    .hero-cola-text h1 {
-        font-size: 110px;
-    }
-
-    .top-cola-text {
-        font-size: 36px;
-        left: -80px;
-    }
-
-    .mid-cola-text {
-        font-size: 36px;
-        left: 30%;
-    }
-
-    .bottom-cola-text {
-        font-size: 64px;
-        right: -100px;
-    }
-
-    .bottle-cola {
-        width: 110px;
-    }
-
-    .ice-cola {
-        width: 90px;
-    }
-}
-
-@media (max-width: 768px) {
-    .hero-cola-text h1 {
-        font-size: 70px;
-    }
-
-    .top-cola-text {
-        font-size: 28px;
-        left: -50px;
-    }
-
-    .mid-cola-text {
-        font-size: 28px;
-        left: 25%;
-    }
-
-    .bottom-cola-text {
-        font-size: 42px;
-        right: -50px;
-    }
-
-    .bottle-cola {
-        width: 90px;
-    }
-
-    .ice-cola {
-        width: 70px;
-    }
-}
-
-@media (max-width: 480px) {
-    .hero-cola-text h1 {
-        font-size: 48px;
-    }
-
-    .top-cola-text {
-        font-size: 20px;
-        left: -30px;
-    }
-
-    .mid-cola-text {
-        font-size: 20px;
-        left: 22%;
-    }
-
-    .bottom-cola-text {
-        font-size: 28px;
-        right: -30px;
-    }
-
-    .bottle-cola {
-        width: 70px;
-    }
-
-    .ice-cola {
-        width: 50px;
-    }
-
-    .mouse-cola {
-        width: 25px;
     }
 }
